# RAG-POC

./: .dockerignore  Dockerfile  README.docker.md  docker-compose.yml  pyproject.toml
src/api/: server.py
src/core/: config.py  documents.py  embeddings.py  question_answering.py  retrieval.py  splitters.py
